--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     <div class="brdr">
       <p style="border: 1px dashed black; width: 950px; color: black; padding-top: 15px; padding-bottom: 15px; padding-left: 10px; text-align: left;">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-      <p style="border: 1px dashed orangered; width: 950px; color: black; padding-top: 15px; padding-bottom: 15px; padding-right: 10px; text-align: right;"><i>Ipsum is simply dummy text of the printing and typesetting industry.</i></p>
+      <p style="border: 1px dashed orangered; width: 950px; color: black; padding-top: 15px; padding-bottom: 15px; padding-right: 10px; text-align: right;"><i>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</i></p>
       <p style="border: 1px dotted blue; width: 950px; color: black; padding-top: 15px; padding-bottom: 15px; padding-bottom: 15px; text-align: center;"><b>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</b></p>
     </div>
       <br>
